[gd_scene load_steps=22 format=2]

[ext_resource path="res://Object/Campaign.png" type="Texture" id=1]
[ext_resource path="res://Object/Controll.png" type="Texture" id=2]
[ext_resource path="res://Object/Boarder.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Object/Buttons/Title.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 190, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 190, 0, 190, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 380, 0, 190, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 570, 0, 190, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 760, 0, 190, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 950, 0, 190, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 1140, 0, 190, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 1330, 0, 190, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 1520, 0, 190, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 1710, 0, 190, 64 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "Animation",
"speed": 15.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "Fader"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Boarder:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.215686 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Controll/Boarder:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Boarder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "CampaignFadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Fader"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Boarder:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.215686 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boarder:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Campaign/Boarder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "ControllFadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeToNormal"
tracks/0/type = "value"
tracks/0/path = NodePath("../../Fader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="AnimatedSprite" parent="."]
position = Vector2( 428, 84 )
scale = Vector2( 2, 2 )
frames = SubResource( 21 )
animation = "Animation"

[node name="Campaign" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = 229.0
margin_right = 192.0
margin_bottom = 245.0
texture = ExtResource( 1 )

[node name="Boarder" type="TextureRect" parent="Campaign"]
self_modulate = Color( 1, 1, 1, 0.607843 )
anchor_left = -0.227
anchor_top = -0.25
anchor_right = -0.227
anchor_bottom = -0.25
margin_left = 0.0559998
margin_right = 128.056
margin_bottom = 16.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="CampaignBoarder" type="AnimationPlayer" parent="Campaign"]
anims/Fader = SubResource( 8 )

[node name="CampaignFadeToBlack" type="AnimationPlayer" parent="Campaign"]
root_node = NodePath("../../Fader")
anims/CampaignFadeToBlack = SubResource( 7 )

[node name="Controll" type="TextureRect" parent="."]
margin_left = 65.0
margin_top = 276.0
margin_right = 193.0
margin_bottom = 292.0
texture = ExtResource( 2 )

[node name="Boarder" type="TextureRect" parent="Controll"]
visible = false
self_modulate = Color( 1, 1, 1, 0.607843 )
anchor_left = -0.227
anchor_top = -0.25
anchor_right = -0.227
anchor_bottom = -0.25
margin_left = -0.944
margin_right = 127.056
margin_bottom = 16.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="ControllBoarder" type="AnimationPlayer" parent="Controll"]
anims/Fader = SubResource( 9 )

[node name="ControllFadeToBlack" type="AnimationPlayer" parent="Controll"]
root_node = NodePath("../../Fader")
anims/ControllFadeToBlack = SubResource( 10 )

[node name="Fader" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="FadeToNormal" type="AnimationPlayer" parent="."]
root_node = NodePath("../Campaign/CampaignFadeToBlack")
anims/FadeToNormal = SubResource( 5 )

[connection signal="animation_finished" from="Campaign/CampaignFadeToBlack" to="." method="_on_campaignFadeToBlack_animation_finished"]
[connection signal="animation_finished" from="Controll/ControllFadeToBlack" to="." method="_on_ControllFadeToBlack_animation_finished"]
[connection signal="animation_finished" from="FadeToNormal" to="." method="_on_FadeToNormal_animation_finished"]
